Fix z-index on DatePicker

--- a/src/alto-ui/Form/DatePicker/DatePicker.scss
+++ b/src/alto-ui/Form/DatePicker/DatePicker.scss
@@ -13,6 +13,7 @@
 .DatePicker__day-picker {
   display: none;
   position: absolute;
+  z-index: $z-index-datepicker;
 
   &--open {
     display: block;
